Fixed overflow issues.

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   height: 100%;
   width: 100%;
   color: #191919;
+  overflow-x: hidden;
 }
 
 .dark html,
@@ -36,3 +37,16 @@ body {
   width: 100%;
 }
 
+#hero {
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.no-scrollbar {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
+}
